--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
